# tcc_api

./: .gitignore  Makefile  README.md  api.py  config.py  crud.py  docker-compose.yml  local.env  main.py  pyproject.toml
apps/problem/: controller.py  crud.py  model.py  schema.py
apps/problems/: controller.py  crud.py  examples.py  models.py  schemas.py
apps/submission/: controller.py  crud.py  schema.py
apps/submissions/: controller.py  crud.py  examples.py  schemas.py
contrib/: auth.py  base64.py  exceptions.py  helpers.py  judge.py  responses.py
converters/: schemas.py
database/: session.py
models/: problem.py  submission.py
routers/: api.py
routers/controllers/: problem.py  submission.py
schemas/: problem.py  submission.py
tests/: conftest.py  test_controller.py
tests/apps/problems/: test_controller.py
tests/apps/submissions/: test_controller.py
