[tool.poetry]
name = "tcc_api"
version = "0.1.0"
description = "Judge API"
authors = ["Caio Santoro <caiosantorodossantos@alunos.fho.edu.br>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
sqlalchemy = "^1.4.39"
hypercorn = "^0.13.2"
pydantic = { extras = ["dotenv"], version = "^1.9.1" }
psycopg2-binary = "^2.9.3"
asyncpg = "^0.26.0"
pytest = "^7.1.3"
requests = "^2.28.1"
pytest-cov = "^4.0.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
blue = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 120
exclude = "(/venv|/.venv)"
